--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,19 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
 charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
 end_of_line = lf
-max_line_length = 120
-# editorconfig-tools is unable to ignore longs strings or urls
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+max_line_length = 100
+trim_trailing_whitespace = true
+[*.md]
+max_line_length = 0
+trim_trailing_whitespace = false
+[{Makefile,**.mk}]
+# Use tabs for indentation (Makefiles require tabs)
+indent_style = tab
+[*.scss]
+indent_size = 2
+indent_style = space
