--- a/.eslintrc
+++ b/.eslintrc
@@ -1,103 +1,35 @@
 {
-    "root": true,
-    "parser": "babel-eslint",
-    "extends": ["airbnb"],
-    "settings": {
-        "react": {
-            "pragma": "React",
-            "version": "16.8"
-        },
-        "import/resolver": {
-            "node": {
-                "paths": ["src"]
-            }
-        }
-    },
-    "parserOptions": {
-        "ecmaVersion": 8,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true,
-            "modules": true
-        }
-    },
-    "plugins": ["jest"],
-    "rules": {
-        "indent": ["error", 4],
-        "max-len": [
-            "error",
-            {
-                "code": 120,
-                "ignoreStrings": true,
-                "ignoreTemplateLiterals": true
-            }
-        ],
-        "class-methods-use-this": "off",
-        "no-param-reassign": [
-            2,
-            {
-                "props": false
-            }
-        ],
-        "no-underscore-dangle": "off",
-        "react/jsx-indent": ["error", 4],
-        "react/jsx-indent-props": ["error", 4],
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [".js"]
-            }
-        ],
-        "react/default-props-match-prop-types": [
-            "error",
-            {
-                "allowRequiredDefaults": true
-            }
-        ],
-        "jsx-a11y/anchor-is-valid": [
-            "error",
-            {
-                "components": ["Link"],
-                "specialLink": ["to", "hrefLeft", "hrefRight"],
-                "aspects": ["noHref", "invalidHref", "preferButton"]
-            }
-        ],
-        "import/no-unresolved": [
-            2,
-            {
-                "ignore": ["shared"]
-            }
-        ],
-        "import/extensions": [
-            2,
-            {
-                "ignore": ["shared"]
-            }
-        ]
-    },
-    "globals": {},
-    "overrides": [
-        {
-            "files": ["src/**/*.js"],
-            "env": {
-                "browser": true
-            }
-        },
-        {
-            "files": ["**/test/**/*.js", "**/*.test.js"],
-            "env": {
-                "browser": true,
-                "jest/globals": true
-            },
-            "rules": {
-                "no-unused-expressions": ["off"],
-                "import/no-extraneous-dependencies": [
-                    "error",
-                    {
-                        "devDependencies": true
-                    }
-                ]
-            }
-        }
+  "parser": "babel-eslint",
+  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "plugins": ["prettier", "jest"],
+  "rules": {
+    "prettier/prettier": "error",
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
     ]
+  },
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  }
 }
