--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "check-eslint-config": "eslint --print-config . | eslint-config-prettier-check",
+        "check-code": "eslint src && prettier --check 'src/**/*.js'"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -46,16 +48,26 @@
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-import": "^2.17.3",
+        "eslint-plugin-jest": "^22.7.2",
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.13.0",
-        "husky": "^2.4.0",
+        "husky": "^2.7.0",
+        "lint-staged": "^9.1.0",
         "prettier": "^1.18.2",
         "pretty-quick": "^1.11.0"
     },
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --staged"
+            "pre-commit": "lint-staged",
+            "pre-push": "npm run check-eslint-config && npm run check-code"
         }
+    },
+    "lint-staged": {
+        "*.js": [
+            "eslint --fix",
+            "prettier --write",
+            "git add"
+        ]
     }
 }
