--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaVersion": 8,
